fix horizontal scroll bar on desktop view

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,7 +37,6 @@
 /* Image with overlay (seen on homepage) */
 .img-container {
    position: relative;
-   display: inline-block;
    overflow: hidden;
 }
 
